# Medicine-Assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
chroma_db/: patients.sqlite3
chroma_db/8cf346f8-70da-4faf-9b6e-5b94bfc5dce9/: index_metadata.pickle
chroma_db/af265132-34a0-46e3-8339-1141329cefd3/: index_metadata.pickle
scripts/: Patient_Diabetes_Records.csv  create_patients_table_pg.py  import_patients_to_postgres.py  ingest_pdf.py  test_agent.py
src/: __init__.py  agent.py  config.py  llm.py  main.py  rag.py
src/medicine_assistant/: agent.py  config.py  llm.py  main.py  rag.py  state.py
src/utils/: stt.py  translate.py
src/web/: app.py
src/web/static/css/: output.css
src/web/templates/: about.html  base.html  consult.html  index.html  patient_form.html  patients.html
tests/: __init__.py  test_config.py  test_rag.py  test_state.py
